--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "nodemon server",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "nodemon server"
   },
   "eslintConfig": {
     "extends": [
